# fast_wheels

./: .env  .gitignore  LICENSE.txt  README.md  README.rst  docker-compose.yml  pyproject.toml
app/: Dockerfile  database.py  main.py  models.py  routes.py
mongo/: Dockerfile  all_cars.json
scrapers/: scrapy-HotWheelTable.py
tests/: test_fast_wheels.py
